# adtecplayground

./: .gitignore  README.md  pyproject.toml  requirements.txt
adtecplayground/: config.py  data.py  metrics.py  modeling.py  plot_boxplot.py  train.py
scripts/: train.sh  train_v2.sh  train_v3.sh
