[project]
name = "adtecplayground"
version = "0.1.0"
description = "AdTEC Ad Acceptability reproduction with Tohoku BERT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages]
find = { include = ["adtecplayground"], exclude = ["*.tests", "*.tests.*", "tests.*", "tests"] }

[tool.black]
line-length = 100